# ghactionstest

./: .git_archival.json  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: build-docker-image.yml  pypi-publish.yml
ghactionstest/: .git_archival.json  _version.py  _version_hooks.py
ghactionstest/level2/: _version.py  _version_hooks.py
