[build-system]
requires = ["setuptools>=61", "versioningit>=3.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-actions-test"
dynamic = ["version"]
description = "Test package for GitHub Actions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Blake Dewey", email = "blake.dewey@jhu.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.versioningit.next-version]
method = "null"

[tool.versioningit.format]
distance = "{base_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+dirty"
distance-dirty = "{base_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "ghactionstest/_static_version.py"
template = '''
version = "{version}"
'''
