[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-actions-test"
dynamic = ["version"]
description = "Test package for GitHub Actions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Blake Dewey", email = "blake.dewey@jhu.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "ghactionstest.__version__"}

[tool.setuptools.cmdclass]
build_py = "ghactionstest._version_hooks.build_py"
sdist = "ghactionstest._version_hooks.sdist"
